changed logo, deleted unwanted code

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="countDisplay">Browser Events Manager</h1>
     <p>A system to capture, store, and replicate browser events</p>
-    <p>To evaluate, navigate to your browser console.</p>
+    <p>To evaluate, go to your browser's extension page, then click on `Load unpacked`, select this repo, then click on service worker to view logged events</p>
 
     <script src="./scripts/popup.js"></script>
 </body>
